--- a/all-dogs.html
+++ b/all-dogs.html
@@ -10,106 +10,132 @@ dogs:
       name: Martha
       age: 2
       dog_image: /images/TSP-2.jpg
+      female: true
    -
       name: Isabella
       age: 7
       dog_image: /images/TSP-4.jpg
+      female: true
    -
       name: Jaguar
       age: 3
       dog_image: /images/TSP-1.jpg
+      male: true
    -
       name: Freya
       age: 4
       dog_image: /images/TSP-3.jpg
+      female: true
    -
       name: Martha
       age: 2
       dog_image: /images/TSP-2.jpg
+      female: true
    -
       name: Isabella
       age: 7
       dog_image: /images/TSP-4.jpg
+      female: true
    -
       name: Jaguar
       age: 3
       dog_image: /images/TSP-1.jpg
+      male: true
    -
       name: Lanta
       age: 4
       dog_image: /images/TSP-3.jpg
+      male: true
    -
       name: Martha
       age: 2
       dog_image: /images/TSP-2.jpg
+      female: true
    -
       name: Isabella
       age: 7
       dog_image: /images/TSP-4.jpg
+      female: true
    -
       name: Jaguar
       age: 3
       dog_image: /images/TSP-1.jpg
+      male: true
    -
       name: Lanta
       age: 4
       dog_image: /images/TSP-3.jpg
+      male: true
    -
       name: Martha
       age: 2
       dog_image: /images/TSP-2.jpg
+      female: true
    -
       name: Isabella
       age: 7
       dog_image: /images/TSP-4.jpg
+      female: true
    -
       name: Jaguar
       age: 3
       dog_image: /images/TSP-1.jpg
+      male: true
    -
       name: Martha
       age: 2
       dog_image: /images/TSP-2.jpg
+      female: true
    -
       name: Isabella
       age: 7
       dog_image: /images/TSP-4.jpg
+      female: true
    -
       name: Jaguar
       age: 3
       dog_image: /images/TSP-1.jpg
+      male: true
    -
       name: Zorro
       age: 5
       dog_image: /images/TSP-1.jpg
+      male: true
    -
       name: Tia
       age: 1
       dog_image: /uploads/img-6161.jpg
+      female: true
    -
       name: Sweetheart
       age: 0.5
       dog_image: /uploads/img-6139.jpg
+      female: true
    -
       name: Yak
       age: 8
       dog_image: /uploads/img-5442.jpg
+      male: true
    -
       name: Lanta
       age: 4
       dog_image: /uploads/img-5378.jpg
+      male: true
    -
       name: Fraser
       age: 4
       dog_image: /uploads/img-5877.jpg
+      male: true
    -
       name: Fred
       age: 2
       dog_image: /uploads/img-5829.jpg
+      male: true
    -
       name: Red
       age: 4
       dog_image: /uploads/img-5528.jpg
+      female: true
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
