Updated 2 files via CloudCannon.

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -163,6 +163,12 @@ dogs:
       dog_image: /uploads/img-5528.jpg
       female: true
       male: false
+   -
+      name: Henry
+      age: 9
+      dog_image: /uploads/img-6343.jpg
+      female: false
+      male: true
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
