--- a/all-dogs.html
+++ b/all-dogs.html
@@ -182,7 +182,7 @@ dogs:
         <div class="col-3 center padded-1 margin-b-2">
             <div class="bg-image portrait" style="background-image: url('{{dog.dog_image}}');"></div>
             <h3 class="margin-t-1 margin-b-0">{{dog.name}}</h3>
-            <p>I am {{dog.age}} years old.</p>
+            <p class="margin-b-0">I am {{dog.age}} years old.</p>
             {% if dog.male == true %}
                <p>I am male.</p>
             {% endif %}
