Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default
 title: Homepage
 donation-banner_image: /images/TSP-3.jpg
-paypal_url: https://www.paypal.com/donate?token=zagr621ZNDWnZHpmoK_YwHsRhgzTWPADWHYdbtc0ducDPWh3osXZOX2R-l93fv65-_5gkIU9fci4lVOA
+paypal_url: >-
+  https://www.paypal.com/donate?token=EJdXoeekcRA-8hFmHZmjYSKSEWoo3iDU9543nv621PY5aq2tDItEXv39_Ih89UuCYq6z_-32MGeEtbJU
 dog-sanctuary_image: /images/TSP-6.jpg
 ---
-
 {% include donation-banner.html %}
 
 <!-- small actions big impact -->
