--- a/help.html
+++ b/help.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: How you can help
+sponsor_url: https://www.paypal.com/donate?token=lWFu5fisPRpMod1-1hV62vCB2BHn2Fey5ka_fdAY6cynu1WGt-HnTrSdnduiGhAVWoECU4qF-aoXQEjb
+donation_url: https://www.paypal.com/donate?token=lWFu5fisPRpMod1-1hV62vCB2BHn2Fey5ka_fdAY6cynu1WGt-HnTrSdnduiGhAVWoECU4qF-aoXQEjb
 volunteer_image: /images/TSP-6.jpg
 donate_image: /images/TSP-5.jpg
 flight-volunteer_image: /images/TSP-3.jpg
@@ -19,13 +21,14 @@ share_image: /images/TSP-1.jpg
     </div>
     <div class="col-6_sm-12 padded">
         <h3>Sponsor a dog</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
-        <a href="#" class="margin-t-1 button">Sponsor</a>
+        <p>Help pay for veterinary care and food for one of our dogs - weekly, monthly or one-off.</p>
+        <a href="{{page.sponsor_url}}" class="margin-t-1 button">Sponsor</a>
     </div>
     <!-- volunteer -->
     <div class="col-6_sm-12 padded">
         <h3>Volunteer at the sanctuary</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
+        <p>We welcome volunteers at Thai Street Paws Rescue who are looking for a fulfilling way to give back by working with the street dogs of Songkhla.</p>
+        <p>Please remember volunteering at the rescue is a “working” holiday. Send us a message for details.</p>
         <a href="/contact.html" class="button margin-t-1">Contact us</a>
     </div>
     <div class="col-6 sm-hide">
@@ -37,14 +40,14 @@ share_image: /images/TSP-1.jpg
     </div>
     <div class="col-6_sm-12 padded">
         <h3>Be a flight volunteer</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
+        <p>Flying from Thailand? You can help dogs fly to their forever homes by being a flight volunteer. We arrange everything. Contact us for details.</p>
         <a href="/contact.html" class="button margin-t-1">Reach out to us</a>
     </div>
     <!-- donate -->
     <div class="col-6_sm-12 padded">
         <h3>Make a donation</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
-        <a href="#" class="button margin-t-1"> Donate</a>
+        <a href="{{page.donation_url}}" class="button margin-t-1"> Donate</a>
     </div>
     <div class="col-6 sm-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.donate_image}}');"></div>
