--- a/about.html
+++ b/about.html
@@ -6,18 +6,18 @@ about_image: /images/TSP-7.jpg
 
 <!-- our story -->
 <section class="grid-spaceBetween padded-lg bg-light">
-    <div class="col-7-middle">
+    <div class="col-7-middle_md-12 md-margin-b">
     <h2 class="margin-b">The power of one to make a change</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quam nobis aliquid officiis laudantium iste cumque error rem doloribus perferendis optio perspiciatis labore sint, cum ipsam veritatis quae. Quasi, est.</p>
     </div>
-    <div class="col-4">
-        <div class="bg-image square" style="background-image: url('{{page.about_image}}');"></div>
+    <div class="col-4_md-12">
+        <div class="bg-image square md-landscape" style="background-image: url('{{page.about_image}}');"></div>
     </div>
 </section>
 
 <!-- quote -->
-<section class="padded">
+<section class="padded sm-hide">
     <div class="capped-width grid">
         <div class="col-1 right featured-text">
             <span class="quote-icon">“</span>
@@ -35,19 +35,19 @@ about_image: /images/TSP-7.jpg
 {% include donation-banner.html %}
 
 <!-- what we do - icon grid-->
-<section class="grid center padded">
-    <h2 class="col-12">What we do</h2>
-    <div class="col-4 padded">
+<section class="grid-center center padded">
+    <h2 class="col-12 md-margin-t">What we do</h2>
+    <div class="col-4_md-6_xs-12 padded">
         <i class="fa-solid fa-house padded"></i>
         <h3 class="padded">Sanctuary</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita fugiat nostrum harum vero iste! Eum tempora fugiat laborum autem doloremque perspiciatis corporis odit, at animi. Quas est consequatur aspernatur animi?</p>
     </div>
-    <div class="col-4 padded">
+    <div class="col-4_md-6_xs-12 padded">
         <i class="fa-solid fa-heart-pulse padded"></i>
         <h3 class="padded">Veterinary Care</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit totam magnam assumenda deleniti, ex fugiat facilis perferendis inventore blanditiis libero sapiente. Eos explicabo dolore tenetur asperiores quod, alias amet velit.</p>
     </div>
-    <div class="col-4 padded">
+    <div class="col-4_md-6_xs-12 padded">
         <i class="fa-solid fa-graduation-cap padded"></i>
         <h3 class="padded">Education</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse quod quos adipisci dolorum in exercitationem, blanditiis animi modi et optio ipsam enim accusamus qui cupiditate aliquam, ratione maiores aperiam explicabo.</p>
