--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@ title: Contact
 
 <section class="padded">
     <div class="grid">
-        <div class="col-5 padded">
+        <div class="col-5_sm-12 padded">
             <p>If you are interested in adopting, volunteering or have any other enquiries, shoot us a message.</p>
             <p>We'd love to hear from you! </p>
         </div>
         <!-- contact form -->
-        <div class="col-7">
+        <div class="col-7_sm-12 sm-padded">
 
             <form>
   
