--- a/help.html
+++ b/help.html
@@ -14,49 +14,49 @@ share_image: /images/TSP-1.jpg
     <h2 class="col-12 center">Ways to get involved...</h2>
 </section>
 
-<section class="grid padded">
+<section class="grid padded md-padded-0">
     <!-- sponsor -->
-    <div class="col-6 sm-hide">
+    <div class="col-6 md-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.sponsor_image}}');"></div>
     </div>
-    <div class="col-6_sm-12 padded">
+    <div class="col-6_md-12-middle padded-sm sm-padded">
         <h3>Sponsor a dog</h3>
         <p>Help pay for veterinary care and food for one of our dogs - weekly, monthly or one-off.</p>
         <a href="{{page.sponsor_url}}" class="margin-t-1 button">Sponsor</a>
     </div>
     <!-- volunteer -->
-    <div class="col-6_sm-12 padded">
+    <div class="col-6_md-12-middle padded-sm md-bg sm-padded">
         <h3>Volunteer at the sanctuary</h3>
         <p>We welcome volunteers at Thai Street Paws Rescue who are looking for a fulfilling way to give back by working with the street dogs of Songkhla.</p>
         <p>Please remember volunteering at the rescue is a “working” holiday. Send us a message for details.</p>
         <a href="/contact.html" class="button margin-t-1">Contact us</a>
     </div>
-    <div class="col-6 sm-hide">
+    <div class="col-6 md-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.volunteer_image}}');"></div>
     </div>
     <!-- flight volunteer -->
-    <div class="col-6 sm-hide">
+    <div class="col-6 md-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.flight-volunteer_image}}');"></div>
     </div>
-    <div class="col-6_sm-12 padded">
+    <div class="col-6_md-12-middle padded-sm sm-padded">
         <h3>Be a flight volunteer</h3>
         <p>Flying from Thailand? You can help dogs fly to their forever homes by being a flight volunteer. We arrange everything. Contact us for details.</p>
         <a href="/contact.html" class="button margin-t-1">Reach out to us</a>
     </div>
     <!-- donate -->
-    <div class="col-6_sm-12 padded">
+    <div class="col-6_md-12-middle padded-sm md-bg sm-padded">
         <h3>Make a donation</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
         <a href="{{page.donation_url}}" class="button margin-t-1"> Donate</a>
     </div>
-    <div class="col-6 sm-hide">
+    <div class="col-6 md-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.donate_image}}');"></div>
     </div>
     <!-- share -->
-    <div class="col-6 sm-hide">
+    <div class="col-6 md-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.share_image}}');"></div>
     </div>
-    <div class="col-6_sm-12 padded">
+    <div class="col-6_md-12-middle padded-sm sm-padded">
         <h3>Share about us</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
         <a href="#" class="button margin-t-1">Spread the word</a>
