--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ dog-sanctuary_image: /images/TSP-6.jpg
 <!-- small actions big impact -->
 <section class="grid padded">
     <h2 class="col-12 center">Small actions, big impact.</h2>
-    <div class="col-6 padded">
+    <div class="col-6_md-12 padded">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae exercitationem voluptates, ad eaque rem perspiciatis quod voluptatibus sequi, doloribus ratione soluta porro. Explicabo dignissimos esse voluptate exercitationem cumque temporibus necessitatibus?</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo omnis sunt ut. Quidem consequuntur fuga non quod suscipit numquam nesciunt deleniti in, rem eligendi est voluptatibus? Eius consectetur aperiam voluptates.</p>
      </div>
-    <div class="col-6 padded-sm">
+    <div class="col-6_md-12 padded-sm sm-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.dog-sanctuary_image}}')"></div>
     </div>
     
