--- a/about.html
+++ b/about.html
@@ -2,6 +2,13 @@
 layout: default
 title: About
 about_image: /images/TSP-7.jpg
+seo:
+  title:
+  description:
+  social_image:
+  twitter_card:
+  keywords:
+  hide-from-google: false
 ---
 
 <!-- our story -->
