--- a/adopt.html
+++ b/adopt.html
@@ -4,11 +4,18 @@ title: Adopt
 adopt-dog_image: /images/TSP-4.jpg
 cost-dog_image: /images/TSP-2.jpg
 info-dog_image: /images/TSP-9.jpg
+seo:
+  title:
+  description:
+  social_image:
+  twitter_card:
+  keywords:
+  hide-from-google: false
 ---
 
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
-  <h2 class="col-12 center">Meet the pups</h2>
+  <h2 class="col-12 center">Find your new best friend here</h2>
 </section>
 
 <!-- dogs grid short desktop-->
