--- a/all-dogs.html
+++ b/all-dogs.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Our Dogs
 dogs:
    -
       name: Lanta
@@ -172,7 +173,7 @@ dogs:
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
-    <h2 class="col-12 center">Find your new best friend here</h2>
+    <h2 class="col-12 center">Meet the pups</h2>
 </section>
 
 <!-- dogs grid all desktop -->
