--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,13 @@
 ---
 layout: default
 title: Contact
+seo:
+  title:
+  description:
+  social_image:
+  twitter_card:
+  keywords:
+  hide-from-google: false
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
