--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@ donation-banner_image: /images/TSP-3.jpg
 paypal_url: >-
   https://www.paypal.com/donate?token=EJdXoeekcRA-8hFmHZmjYSKSEWoo3iDU9543nv621PY5aq2tDItEXv39_Ih89UuCYq6z_-32MGeEtbJU
 dog-sanctuary_image: /images/TSP-6.jpg
+seo:
+  title:
+  description:
+  social_image:
+  twitter_card:
+  keywords:
+  hide-from-google: false
 ---
 {% include donation-banner.html %}
 
