--- a/help.html
+++ b/help.html
@@ -8,6 +8,13 @@ donate_image: /images/TSP-5.jpg
 flight-volunteer_image: /images/TSP-3.jpg
 sponsor_image: /images/TSP-5.jpg
 share_image: /images/TSP-1.jpg
+seo:
+  title:
+  description:
+  social_image:
+  twitter_card:
+  keywords:
+  hide-from-google: false
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
@@ -56,11 +63,41 @@ share_image: /images/TSP-1.jpg
     <div class="col-6 md-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.share_image}}');"></div>
     </div>
-    <div class="col-6_md-12-middle padded-sm sm-padded">
-        <h3>Share about us</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
-        <a href="#" class="button margin-t-1">Spread the word</a>
+    <div class="col-6_md-12-middle padded-sm md-bg sm-padded">
+            <h3>Spread the word</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima:</p>
+            <a id="social-share-button" class="button">Share about us</a>
+
+        <div class="grid" id="social-share">
+            <a class="col-5_md-3_xs-12-middle">Share about us</p>
+            <nav class="social-share col-6_md-5_xs-12 md-left">
+                <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.data.site-settings.social.twitter_username }}&related={{ site.data.site-settings.social.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter" class="xs-margin-l-0">
+                    <i class="fab fa-twitter md-size"></i>
+                </a>
+                <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
+                    <i class="fab fa-facebook-f md-size"></i>
+                </a>
+                <a href="http://pinterest.com/pin/create/link/?url={{page.url}}&description={{page.title}}" rel="nofollow" target="_blank" title="Share on Pinterest">
+                <i class="fab fa-pinterest-p md-size"></i>
+                </a>
+            </nav>
+        </div>
     </div>
 </section>
 
 {% include adoption-banner.html %}
+
+<!-- <div class="grid">
+    <a class="col-5_md-3_xs-12-middle button" id="social-share-button">Share about us</p>
+    <nav class="social-share col-6_md-5_xs-12 md-left" id="social-share">
+        <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.data.site-settings.social.twitter_username }}&related={{ site.data.site-settings.social.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter" class="xs-margin-l-0">
+            <i class="fab fa-twitter md-size"></i>
+        </a>
+        <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
+            <i class="fab fa-facebook-f md-size"></i>
+        </a>
+        <a href="http://pinterest.com/pin/create/link/?url={{page.url}}&description={{page.title}}" rel="nofollow" target="_blank" title="Share on Pinterest">
+        <i class="fab fa-pinterest-p md-size"></i>
+        </a>
+    </nav>
+</div> -->
