favicon and seo

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ about_image: /images/TSP-7.jpg
 seo:
   title:
   description:
-  social_image:
+  social_image: /images/logo.png
   twitter_card:
   keywords:
   hide-from-google: false
