--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title: Contact
 seo:
   title:
   description:
-  social_image:
+  social_image: /images/logo.png
   twitter_card:
   keywords:
   hide-from-google: false
