--- a/help.html
+++ b/help.html
@@ -11,7 +11,7 @@ share_image: /images/TSP-1.jpg
 seo:
   title:
   description:
-  social_image:
+  social_image: /images/logo.png
   twitter_card:
   keywords:
   hide-from-google: false
@@ -68,8 +68,7 @@ seo:
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima:</p>
             <a id="social-share-button" class="button">Share about us</a>
 
-        <div class="grid" id="social-share">
-            <a class="col-5_md-3_xs-12-middle">Share about us</p>
+        <div class="grid default-hide" id="social-share">
             <nav class="social-share col-6_md-5_xs-12 md-left">
                 <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.data.site-settings.social.twitter_username }}&related={{ site.data.site-settings.social.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter" class="xs-margin-l-0">
                     <i class="fab fa-twitter md-size"></i>
