--- a/help.html
+++ b/help.html
@@ -63,7 +63,7 @@ seo:
     <div class="col-6 md-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.share_image}}');"></div>
     </div>
-    <div class="col-6_md-12-middle padded-sm md-bg sm-padded">
+    <div class="col-6_md-12-middle padded-sm sm-padded">
             <h3>Spread the word</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima:</p>
             <a id="social-share-button" class="button">Share about us</a>
