--- a/about.html
+++ b/about.html
@@ -14,9 +14,12 @@ seo:
 <!-- our story -->
 <section class="grid-spaceBetween padded-lg bg-light">
     <div class="col-7-middle_md-12 md-margin-b">
-    <h2 class="margin-b">The power of one to make a change</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quam nobis aliquid officiis laudantium iste cumque error rem doloribus perferendis optio perspiciatis labore sint, cum ipsam veritatis quae. Quasi, est.</p>
+    <h2 class="margin-b editable">The power of one to make a change</h2>
+    <p class="editable">Founded by Tamara Johnston in 2012, Thai Street Paws Rescue is an organization committed to improving the lives of street dogs in southern Thailand. Originally from Australia, Tamara first encountered the heartbreaking plight of street dogs while living and teaching in Thailand in 2003. After rescuing her first dog, Bella, Tamara realized that the needs of these vulnerable animals were far greater than what local resources could support.</p>
+    <p class="editable">As she continued to work in Thailand, the situation became impossible to ignore. The lack of established animal rescue organizations in the southern region of Thailand left many dogs abandoned, sick, and injured. Determined to make a difference, Tamara began feeding, sterilizing, and caring for the local street dogs. But as the number of dogs grew, she began to take them into her home to provide them with the medical care, food, and love they deserved.</p>
+    <p class="editable">Driven by the desire to save as many dogs as possible, Thai Street Paws Rescue was born in 2012 with a clear mission: to vaccinate, sterilize, medicate, feed, and find loving homes for as many dogs as possible.</p>
+    <p class="editable">Today, Thai Street Paws Rescue strives to improve the lives of street dogs one paw at a time, while working towards a future where every dog has a safe place to call home.</p>
+    <p class="editable">If you're looking for ways to help, or would like to adopt a street dog, please join us in making the lives of Thailand’s street dogs brighter, one paw at a time.</p>
     </div>
     <div class="col-4_md-12">
         <div class="bg-image square md-landscape" style="background-image: url('{{page.about_image}}');"></div>
@@ -30,8 +33,8 @@ seo:
             <span class="quote-icon">“</span>
         </div>
         <div class="col-10">
-            <p class="center text-md featured-text bold">I know I can't save every single one, but I want to help as many as I can.</p>
-            <p class="right subtitle featured-text"> – Tamara Johnston</p>
+            <p class="center text-md featured-text bold editable">I know I can't save every single one, but I want to help as many as I can.</p>
+            <p class="right subtitle featured-text editable"> – Tamara Johnston</p>
         </div>
         <div class="col-1"> 
             <span class="quote-icon featured-text">”</span>
@@ -46,18 +49,18 @@ seo:
     <h2 class="col-12 md-margin-t">What we do</h2>
     <div class="col-4_md-6_xs-12 padded">
         <i class="fa-solid fa-house padded"></i>
-        <h3 class="padded">Sanctuary</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita fugiat nostrum harum vero iste! Eum tempora fugiat laborum autem doloremque perspiciatis corporis odit, at animi. Quas est consequatur aspernatur animi?</p>
+        <h3 class="padded editable">Sanctuary</h3>
+        <p class="editable">We provide shelter to over 150 dogs. A safe haven off the streets where the dogs receive food, medical care, and the much needed love they deserve.</p>
     </div>
     <div class="col-4_md-6_xs-12 padded">
         <i class="fa-solid fa-heart-pulse padded"></i>
-        <h3 class="padded">Veterinary Care</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit totam magnam assumenda deleniti, ex fugiat facilis perferendis inventore blanditiis libero sapiente. Eos explicabo dolore tenetur asperiores quod, alias amet velit.</p>
+        <h3 class="padded editable">Veterinary Care</h3>
+        <p class="editable">We work with local vets to provide vaccinations, sterilizations, medical care for injuries and diseases such as parvo, distemper, and blood parasites.</p>
     </div>
     <div class="col-4_md-6_xs-12 padded">
         <i class="fa-solid fa-graduation-cap padded"></i>
-        <h3 class="padded">Education</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse quod quos adipisci dolorum in exercitationem, blanditiis animi modi et optio ipsam enim accusamus qui cupiditate aliquam, ratione maiores aperiam explicabo.</p>
+        <h3 class="padded editable">Education</h3>
+        <p class="editable">While trying to respect the Thai culture we also strive to educate the locals about the importance of sterilization and vaccinations so that we can end the cycle of suffering.</p>
     </div>
 </section>
 
