--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,10 @@ seo:
 <!-- social banner -->
 <section class="grid-center padded">
     <h2 class="col-12 center">Find us on social media</h2>
-    <a href="https://www.instagram.com/thaistreetpaws_dogrescue/" class="margin-r-2">
+    <a href="https://www.instagram.com/thaistreetpaws_dogrescue/" class="margin-r-2" target="_blank">
         <i class="big-icon fa-brands fa-instagram"></i>
     </a>
-    <a href="https://www.facebook.com/thaistreetpawsrescue/">
+    <a href="https://www.facebook.com/thaistreetpawsrescue/" target="_blank">
         <i class="big-icon fa-brands fa-square-facebook"></i>
     </a>
 </section>
