--- a/help.html
+++ b/help.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 title: How you can help
-sponsor_url: https://www.paypal.com/donate?token=lWFu5fisPRpMod1-1hV62vCB2BHn2Fey5ka_fdAY6cynu1WGt-HnTrSdnduiGhAVWoECU4qF-aoXQEjb
-donation_url: https://www.paypal.com/donate?token=lWFu5fisPRpMod1-1hV62vCB2BHn2Fey5ka_fdAY6cynu1WGt-HnTrSdnduiGhAVWoECU4qF-aoXQEjb
+sponsor_url: https://www.paypal.com/paypalme/thaistreetpawsrescue
+donation_url: https://www.paypal.com/paypalme/thaistreetpawsrescue
 volunteer_image: /images/TSP-6.jpg
 donate_image: /images/TSP-5.jpg
 flight-volunteer_image: /images/TSP-3.jpg
-sponsor_image: /images/TSP-5.jpg
+sponsor_image: /images/TSP-4.jpg
 share_image: /images/TSP-1.jpg
 seo:
   title:
@@ -29,7 +29,7 @@ seo:
     <div class="col-6_md-12-middle padded-sm sm-padded">
         <h3>Sponsor a dog</h3>
         <p>Help pay for veterinary care and food for one of our dogs - weekly, monthly or one-off.</p>
-        <a href="{{page.sponsor_url}}" class="margin-t-1 button">Sponsor</a>
+        <a href="{{page.sponsor_url}}" class="margin-t-1 button" target="_blank">Sponsor</a>
     </div>
     <!-- volunteer -->
     <div class="col-6_md-12-middle padded-sm md-bg sm-padded">
@@ -53,8 +53,8 @@ seo:
     <!-- donate -->
     <div class="col-6_md-12-middle padded-sm md-bg sm-padded">
         <h3>Make a donation</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
-        <a href="{{page.donation_url}}" class="button margin-t-1"> Donate</a>
+        <p>Help us continue to provide life-saving care for street dogs in Thailand. Your donation directly supports their medical treatment, food, and daily needs. Whether it's a one-time gift or a monthly contribution, your generosity makes a real difference in the lives of the dogs we rescue.</p>
+        <a href="{{page.donation_url}}" class="button margin-t-1" target="_blank"> Donate</a>
     </div>
     <div class="col-6 md-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.donate_image}}');"></div>
@@ -65,7 +65,8 @@ seo:
     </div>
     <div class="col-6_md-12-middle padded-sm sm-padded">
             <h3>Spread the word</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima:</p>
+            <p>Every share counts! By telling others about our mission, you can help us find more supporters, volunteers, and forever homes for the dogs in our care.</p>
+            <p>Spread the word on social media or simply share our story with friends and family. Together, we can build a community of compassionate people dedicated to making a difference.</p>
             <a id="social-share-button" class="button">Share about us</a>
 
         <div class="grid default-hide" id="social-share">
@@ -85,18 +86,3 @@ seo:
 </section>
 
 {% include adoption-banner.html %}
-
-<!-- <div class="grid">
-    <a class="col-5_md-3_xs-12-middle button" id="social-share-button">Share about us</p>
-    <nav class="social-share col-6_md-5_xs-12 md-left" id="social-share">
-        <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.data.site-settings.social.twitter_username }}&related={{ site.data.site-settings.social.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter" class="xs-margin-l-0">
-            <i class="fab fa-twitter md-size"></i>
-        </a>
-        <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
-            <i class="fab fa-facebook-f md-size"></i>
-        </a>
-        <a href="http://pinterest.com/pin/create/link/?url={{page.url}}&description={{page.title}}" rel="nofollow" target="_blank" title="Share on Pinterest">
-        <i class="fab fa-pinterest-p md-size"></i>
-        </a>
-    </nav>
-</div> -->
