--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Homepage
+title: Thai Street Paws
 donation-banner_image: /images/TSP-3.jpg
 paypal_url: https://www.paypal.com/paypalme/thaistreetpawsrescue
 dog-sanctuary_image: /images/TSP-6.jpg
