Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ paypal_url: https://www.paypal.com/paypalme/thaistreetpawsrescue
 dog-sanctuary_image: /images/TSP-6.jpg
 seo:
   title:
-  description:
+  description: >-
+    Thai Street Paws Rescue is a non-profit organization that resues dogs in
+    need in the South of Thailand in Songkhla.
   social_image:
   twitter_card:
   keywords:
