Updated 2 files via CloudCannon.

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -171,7 +171,7 @@ dogs:
       female: false
       male: true
    -
-      name: name
+      name: Chilli
       age:
       dog_image: /images/dogs/dog1.jpg
       female:
@@ -255,12 +255,6 @@ dogs:
       female:
       male:
    -
-      name: name
-      age:
-      dog_image: /images/dogs/dog15.jpg
-      female:
-      male:
-      -
       name: name
       age:
       dog_image: /images/dogs/dog16.jpg
@@ -347,12 +341,6 @@ dogs:
    -
       name: name
       age:
-      dog_image: /images/dogs/dog30.jpg
-      female:
-      male:
-      -
-      name: name
-      age:
       dog_image: /images/dogs/dog31.jpg
       female:
       male:
@@ -435,12 +423,6 @@ dogs:
       female:
       male:
    -
-      name: name
-      age:
-      dog_image: /images/dogs/dog45.jpg
-      female:
-      male:
-      -
       name: name
       age:
       dog_image: /images/dogs/dog46.jpg
@@ -527,12 +509,6 @@ dogs:
    -
       name: name
       age:
-      dog_image: /images/dogs/dog60.jpg
-      female:
-      male:
-      -
-      name: name
-      age:
       dog_image: /images/dogs/dog61.jpg
       female:
       male:
@@ -617,12 +593,6 @@ dogs:
    -
       name: name
       age:
-      dog_image: /images/dogs/dog75.jpg
-      female:
-      male:
-      -
-      name: name
-      age:
       dog_image: /images/dogs/dog76.jpg
       female:
       male:
@@ -705,12 +675,6 @@ dogs:
       female:
       male:
    -
-      name: name
-      age:
-      dog_image: /images/dogs/dog90.jpg
-      female:
-      male:
-      -
       name: name
       age:
       dog_image: /images/dogs/dog91.jpg
